section principale et portfolio

--- a/index.html
+++ b/index.html
@@ -19,6 +19,25 @@
             </ul>
         </div>
     </nav>
-    
+
+    <!-- Section principale -->
+    <header>
+        <img src="avatar.png" alt="Avatar">
+        <h2>START CSS</h2>
+        <p>Graphic Artist · Web Designer · Illustrator</p>
+    </header>
+
+    <!-- Portfolio -->
+    <section id="portfolio">
+        <h2>PORTFOLIO</h2>
+        <div class="grid">
+            <div class="item"><img src="image1.png" alt=""></div>
+            <div class="item"><img src="image2.png" alt=""></div>
+            <div class="item"><img src="image3.png" alt=""></div>
+            <div class="item"><img src="image4.png" alt=""></div>
+            <div class="item"><img src="image5.png" alt=""></div>
+            <div class="item"><img src="image6.png" alt=""></div>
+        </div>
+    </section>
 </body>
 </html>
