--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <!-- Section principale -->
     <header>
-        <img src="avatar.png" alt="Avatar">
+        <img src="img/avataaars.svg" alt="Avatar">
         <h2>START CSS</h2>
         <p>Graphic Artist · Web Designer · Illustrator</p>
     </header>
@@ -31,12 +31,12 @@
     <section id="portfolio">
         <h2>PORTFOLIO</h2>
         <div class="grid">
-            <div class="item"><img src="image1.png" alt=""></div>
-            <div class="item"><img src="image2.png" alt=""></div>
-            <div class="item"><img src="image3.png" alt=""></div>
-            <div class="item"><img src="image4.png" alt=""></div>
-            <div class="item"><img src="image5.png" alt=""></div>
-            <div class="item"><img src="image6.png" alt=""></div>
+            <div class="item"><img src="img/portfolio/cabin.png" alt=""></div>
+            <div class="item"><img src="img/portfolio/cake.png" alt=""></div>
+            <div class="item"><img src="img/portfolio/circus.png" alt=""></div>
+            <div class="item"><img src="img/portfolio/game.png" alt=""></div>
+            <div class="item"><img src="img/portfolio/safe.png" alt=""></div>
+            <div class="item"><img src="img/portfolio/submarine.png" alt=""></div>
         </div>
     </section>
 </body>
