--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
     <section id="portfolio">
         <h2>PORTFOLIO</h2>
         <div class="grid">
-            <div class="item"><img src="img/portfolio/cabin.png" alt=""></div>
-            <div class="item"><img src="img/portfolio/cake.png" alt=""></div>
-            <div class="item"><img src="img/portfolio/circus.png" alt=""></div>
-            <div class="item"><img src="img/portfolio/game.png" alt=""></div>
-            <div class="item"><img src="img/portfolio/safe.png" alt=""></div>
-            <div class="item"><img src="img/portfolio/submarine.png" alt=""></div>
+            <div class="item"><img src="img/portfolio/cabin.png" alt="cabine"></div>
+            <div class="item"><img src="img/portfolio/cake.png" alt="cake"></div>
+            <div class="item"><img src="img/portfolio/circus.png" alt="circus"></div>
+            <div class="item"><img src="img/portfolio/game.png" alt="portfolio"></div>
+            <div class="item"><img src="img/portfolio/safe.png" alt="safe"></div>
+            <div class="item"><img src="img/portfolio/submarine.png" alt="submarine"></div>
         </div>
     </section>
 </body>
