--- a/index.html
+++ b/index.html
@@ -39,5 +39,11 @@
             <div class="item"><img src="img/portfolio/submarine.png" alt="submarine"></div>
         </div>
     </section>
+
+     <!-- Section About -->
+     <section id="about">
+        <h2>ABOUT</h2>
+        <p>Freelancer is a free bootstrap theme created by Start Bootstrap...</p>
+    </section>
 </body>
 </html>
