--- a/index.html
+++ b/index.html
@@ -45,5 +45,17 @@
         <h2>ABOUT</h2>
         <p>Freelancer is a free bootstrap theme created by Start Bootstrap...</p>
     </section>
+
+      <!-- Contact -->
+    <section id="contact">
+        <h2>CONTACT ME</h2>
+        <form>
+            <input type="text" placeholder="Name">
+            <input type="email" placeholder="Email Address">
+            <input type="text" placeholder="Phone Number">
+            <textarea placeholder="Message"></textarea>
+            <button type="submit">Send</button>
+        </form>
+    </section>
 </body>
 </html>
