--- a/index.html
+++ b/index.html
@@ -57,5 +57,9 @@
             <button type="submit">Send</button>
         </form>
     </section>
+
+    <footer>
+        <p>Copyright &copy; Your Website 2020</p>
+    </footer>
 </body>
 </html>
