--- a/index.html
+++ b/index.html
@@ -42,9 +42,12 @@
 
     <section id="about">
         <h2>ABOUT</h2>
-        <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes HTML, CSS, JavaScript as well as a SASS stylesheet for easy customization. </p>
-        <p>You can create your own custom avatar for the masthead, change the icon in the dividers, and add your email address for maximum functionality!</p>
+        <div>
+            <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes HTML, CSS, JavaScript as well as a SASS stylesheet for easy customization.</p>
+            <p>You can create your own custom avatar for the masthead, change the icon in the dividers, and add your email address for maximum functionality!</p>
+        </div>
     </section>
+    
     
 
       <!-- Contact -->
